fixed account word wrap issue

--- a/_Resources/css_styles/site_styles.scss
+++ b/_Resources/css_styles/site_styles.scss
@@ -5,9 +5,6 @@
 body {
 	/*background-color: #CCC;*/
 	color: #000;
-	font-family: Arial;
-	font-size: 10pt;
-	line-height: 1.5em;
 	margin: auto;
 	text-align: justify;
 	height: 100%;
