--- a/_Resources/css_styles/witness_styles_old.scss
+++ b/_Resources/css_styles/witness_styles_old.scss
@@ -1,6 +1,5 @@
 .anthology, .manuscript {
 	color: #000;
-	font-family: Andron;
 	font-size: 12pt;
 	line-height: 1.5em;
 	text-align: center;
@@ -572,7 +571,6 @@ position: fixed;
   width: 40%;
   background: #eee;
 	overflow: scroll;
-	font-family: Andron;
 }
 #content-right, #content-left{
 	height: 100%;
